// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`crud operations Create Operation 1`] = `
"{
  \\"name\\": \\"create-my-resource-input\\",
  \\"comments\\": [],
  \\"persistant\\": true,
  \\"attributes\\": [
    {
      \\"name\\": \\"required-name\\",
      \\"shortName\\": \\"required-name\\",
      \\"type\\": \\"String\\",
      \\"management\\": \\"USER_MANAGED\\",
      \\"visibility\\": \\"USER_VISIBLE\\",
      \\"comments\\": [],
      \\"required\\": true,
      \\"generator\\": \\"None\\"
    },
    {
      \\"name\\": \\"optional-name\\",
      \\"shortName\\": \\"optional-name\\",
      \\"type\\": \\"String\\",
      \\"management\\": \\"USER_MANAGED\\",
      \\"visibility\\": \\"USER_VISIBLE\\",
      \\"comments\\": [],
      \\"required\\": false,
      \\"generator\\": \\"None\\"
    }
  ]
}"
`;

exports[`crud operations Create Operation 2`] = `
"{
  \\"name\\": \\"my-resource\\",
  \\"shortName\\": \\"my-resource\\",
  \\"type\\": \\"my-resource\\",
  \\"management\\": \\"SYSTEM_MANAGED\\",
  \\"visibility\\": \\"USER_VISIBLE\\",
  \\"comments\\": [],
  \\"required\\": true,
  \\"generator\\": \\"None\\"
}"
`;

exports[`crud operations Delete Operation 1`] = `
"{
  \\"name\\": \\"delete-my-resource-input\\",
  \\"comments\\": [],
  \\"persistant\\": true,
  \\"attributes\\": [
    {
      \\"name\\": \\"id\\",
      \\"shortName\\": \\"id\\",
      \\"type\\": \\"String\\",
      \\"management\\": \\"SYSTEM_MANAGED\\",
      \\"visibility\\": \\"USER_VISIBLE\\",
      \\"comments\\": [
        \\"Identifier for this record.\\"
      ],
      \\"required\\": true,
      \\"generator\\": \\"None\\"
    }
  ]
}"
`;

exports[`crud operations Delete Operation 2`] = `
"{
  \\"name\\": \\"my-resource\\",
  \\"shortName\\": \\"my-resource\\",
  \\"type\\": \\"my-resource\\",
  \\"management\\": \\"SYSTEM_MANAGED\\",
  \\"visibility\\": \\"USER_VISIBLE\\",
  \\"comments\\": [],
  \\"required\\": true,
  \\"generator\\": \\"None\\"
}"
`;

exports[`crud operations Read Operation 1`] = `
"{
  \\"name\\": \\"get-my-resource-input\\",
  \\"comments\\": [],
  \\"persistant\\": true,
  \\"attributes\\": [
    {
      \\"name\\": \\"id\\",
      \\"shortName\\": \\"id\\",
      \\"type\\": \\"String\\",
      \\"management\\": \\"SYSTEM_MANAGED\\",
      \\"visibility\\": \\"USER_VISIBLE\\",
      \\"comments\\": [
        \\"Identifier for this record.\\"
      ],
      \\"required\\": true,
      \\"generator\\": \\"None\\"
    }
  ]
}"
`;

exports[`crud operations Read Operation 2`] = `
"{
  \\"name\\": \\"my-resource\\",
  \\"shortName\\": \\"my-resource\\",
  \\"type\\": \\"my-resource\\",
  \\"management\\": \\"SYSTEM_MANAGED\\",
  \\"visibility\\": \\"USER_VISIBLE\\",
  \\"comments\\": [],
  \\"required\\": true,
  \\"generator\\": \\"None\\"
}"
`;

exports[`crud operations Update Operation 1`] = `
"{
  \\"name\\": \\"update-my-resource-input\\",
  \\"comments\\": [],
  \\"persistant\\": true,
  \\"attributes\\": [
    {
      \\"name\\": \\"id\\",
      \\"shortName\\": \\"id\\",
      \\"type\\": \\"String\\",
      \\"management\\": \\"SYSTEM_MANAGED\\",
      \\"visibility\\": \\"USER_VISIBLE\\",
      \\"comments\\": [
        \\"Identifier for this record.\\"
      ],
      \\"required\\": true,
      \\"generator\\": \\"None\\"
    },
    {
      \\"name\\": \\"required-name\\",
      \\"shortName\\": \\"required-name\\",
      \\"type\\": \\"String\\",
      \\"management\\": \\"USER_MANAGED\\",
      \\"visibility\\": \\"USER_VISIBLE\\",
      \\"comments\\": [],
      \\"required\\": false,
      \\"generator\\": \\"None\\"
    },
    {
      \\"name\\": \\"optional-name\\",
      \\"shortName\\": \\"optional-name\\",
      \\"type\\": \\"String\\",
      \\"management\\": \\"USER_MANAGED\\",
      \\"visibility\\": \\"USER_VISIBLE\\",
      \\"comments\\": [],
      \\"required\\": false,
      \\"generator\\": \\"None\\"
    }
  ]
}"
`;

exports[`crud operations Update Operation 2`] = `
"{
  \\"name\\": \\"my-resource\\",
  \\"shortName\\": \\"my-resource\\",
  \\"type\\": \\"my-resource\\",
  \\"management\\": \\"SYSTEM_MANAGED\\",
  \\"visibility\\": \\"USER_VISIBLE\\",
  \\"comments\\": [],
  \\"required\\": true,
  \\"generator\\": \\"None\\"
}"
`;
